<resources>
    <string name="app_name">سپهر 3 مدیران</string>
    <string name="app_Title">سیستم یکپارچه مالی</string>
    <string name="sFirstRemDebitSumDebit">جمع بدهکار</string>
    <string name="sFirstRemCreditSumCredit">جمع بستانکار</string>
    <string name="sRemDebitFinal">مانده بدهکار</string>
    <string name="sRemCreditFinal">مانده بستانکار</string>
    <string name="sBalanceSheetName">تراز آزمایشی</string>
    <string name="sTafsilJournal">عملکرد حسابهای تفصیلی</string>
    <string name="sAccountJournal">دفاتر</string>
    <string name="sAcc_No">شماره حساب</string>
    <string name="sAcc_Name">نام حساب</string>
    <string name="sLAcc_Name">نام لاتین حساب</string>
    <string name="sTafsil_No">شماره تفصیلی</string>
    <string name="sTafsil_Name">نام تفصیلی</string>
    <string name="sLTafsil_Name">نام لاتین تفصیلی</string>
    <string name="sLevels">انتخاب سطح</string>
    <string name="sLevelTafsil1">تفصیلی 1</string>
    <string name="sLevelTafsil2">تفصیلی 2</string>
    <string name="sLevelTafsil3">تفصیلی 3</string>
    <string name="sSelectLevel">یکی از سطوح را انتخاب کنید</string>
    <string name="sSaveChange">تغییرات ذخیره شد</string>
    <string name="msgOKButton">تایید</string>
    <string name="msgCancelButton">لغو</string>
    <string name="msgCheckIntenet">اینترنت و یا شبکه خود را چک کنید</string>
    <string name="msgCheckConnections">ارتباط با سرور برقرار خواهد شد</string>
    <string name="sTafsil">تفصیل</string>
    <string name="sFilter">فیلتر</string>
    <string name="sGardesh">حساب فوق گردشی ندارد</string>
    <string name="mDocumentManager">مدیریت اسناد</string>
    <string name="mDocumentShow">نمایش سند</string>
    <string name="mAccountJournals">دفاتر</string>
    <string name="mTafsilJournals">عملکرد حسابهای تفصیلی</string>
    <string name="mBalanceSheet">تراز آزمایشی</string>
    <string name="mSetting">تنظیمات</string>
    <string name="mChangeYear">تغییر دوره مالی</string>
    <string name="mExit">خروج</string>
    <string name="msgNotIpAddress">لطفا آدرس معتبر وارد نمایید</string>
    <string name="slblPortAddress">درگاه را وارد نمایید</string>
    <string name="slblIPAddress">آدرس وب سرویس را وارد نمایید</string>
    <string name="sSelectCompany">شرکت را انتخاب نمایید</string>
    <string name="sSelectYear">سال مالی را انتخاب نمایید</string>
    <string name="sbtn_CheckConnection">چک کردن آدرس</string>
    <string name="sBtnGo">ورود</string>
    <string name="sBtnSearch">جستجو</string>
    <string name="sBtn_Save">ذخیره</string>
    <string name="sBtn_New">جدید</string>
    <string name="schk_Status">فعال/غیر فعال</string>
    <string name="sEditDelete">ویرایش و حذف</string>
    <string name="title_activity_main_app">سپهر 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">تنظیمات</string>
    <string name="sProccess">در حال دریافت اطلاعات ...</string>
    <string name="sWaitePLZ">صبر کنید</string>
    <string name="sSarfasl">سرفصل حسابها</string>
    <string name="sWCTRL">منتظر کنترل</string>
    <string name="sCTRL">کنترل شده</string>
    <string name="sWCNF">منتظر تایید</string>
    <string name="sCNF">تایید شده</string>
    <string name="sWRGST">منتظر ثبت</string>
    <string name="sRGST">ثبت شده</string>
    <string name="sALLDOC">همه اسناد</string>
    <string name="sDoc_no">شماره سند</string>
    <string name="sDoc_date">تاریخ</string>
    <string name="sDoc_type">نوع سند</string>
    <string name="sDoc_id">عطف</string>
    <string name="sDoc_desc">شرح</string>
    <string name="sDoc_notes">توضیحات</string>
    <string name="sDoc_attach">پیوست</string>
    <string name="sDoc_sum">جمع</string>
    <string name="sDoc_rem">مانده</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_co_year">ActivitySelectCoYear</string>
</resources>
