<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_DocumentManager"
            android:icon="@drawable/ic_menu_balance_sheet"
            android:title="@string/mDocumentManager" />
        <item
            android:id="@+id/nav_AccountJournal"
            android:icon="@drawable/ic_menu_balance_sheet"
            android:title="@string/mAccountJournals" />
        <item
            android:id="@+id/nav_TafsilJournal"
            android:icon="@drawable/ic_menu_balance_sheet"
            android:title="@string/mTafsilJournals" />
        <item
            android:id="@+id/nav_BalanceSheet"
            android:icon="@drawable/ic_menu_balance_sheet"
            android:title="@string/mBalanceSheet" />
        <item
            android:id="@+id/nav_ChangeYear"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/mChangeYear" />
        <item
            android:id="@+id/nav_Exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/mExit" />

    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
