<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySelectCoYear">


    <RelativeLayout
        style="@style/matchScale"
        >
        <!--<TextView
            style="@style/Lable"
            android:id="@+id/coy_lblAddress"
            android:text="@string/slblIPAddress"
            />
        <EditText
            style="@style/TextBox"
            android:id="@+id/coy_Address"
            android:layout_below="@+id/coy_lblAddress"
            />
        <Button
            style="@style/Button"
            android:id="@+id/coy_BtnCheckAddress"
            android:layout_below="@+id/coy_Address"
            android:text="@string/sbtn_CheckConnection"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/coy_lblCompany"
            android:layout_below="@+id/coy_BtnCheckAddress"
            android:text="@string/sSelectCompany"
            />
            -->
        <ImageView
            android:id="@+id/coy_img"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/user" />
        <TextView
            style="@style/Lable"
            android:id="@+id/coy_lblCompany"
            android:text="@string/sSelectCompany"
            android:layout_below="@+id/coy_img"
            />
        <Spinner
            style="@style/ComboBox"
            android:id="@+id/coy_Company"
            android:layout_below="@+id/coy_lblCompany"
            />
        <TextView
            style="@style/Lable"
            android:id="@+id/coy_lblYear"
            android:layout_below="@+id/coy_Company"
            android:text="@string/sSelectYear"
            />
        <Spinner
            style="@style/ComboBox"
            android:id="@+id/coy_Year"
            android:layout_below="@+id/coy_lblYear"
            />
        <Button
            style="@style/Button"
            android:id="@+id/coy_Go"
            android:layout_below="@+id/coy_Year"
            android:text="@string/sBtnGo"
            />
        <Button
            style="@style/Button"
            android:id="@+id/coy_Address"
            android:layout_below="@+id/coy_Go"
            android:text="@string/action_settings"
            />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>