<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentDocumentShow">

    <RelativeLayout
        style="@style/matchScale"
        >
        <RelativeLayout
            style="@style/matchScale.half2part.center"
            android:id="@+id/fds_Center1"
            android:layout_alignParentTop="true"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_lblDoc_no"
            android:text="@string/sDoc_no"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/fds_Center1"
            />
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_txtDoc_no"
            android:layout_below="@+id/fds_lblDoc_no"
            android:layout_toRightOf="@+id/fds_Center1"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_lblDoc_date"
            android:text="@string/sDoc_date"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/fds_Center1"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_txtDoc_date"
            android:layout_below="@+id/fds_lblDoc_date"
            android:layout_toLeftOf="@+id/fds_Center1"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_lblid"
            android:text="@string/sDoc_id"
            android:layout_below="@+id/fds_txtDoc_no"
            android:layout_toRightOf="@+id/fds_Center1"
            />
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_txtDoc_id"
            android:layout_below="@+id/fds_lblid"
            android:layout_toRightOf="@+id/fds_Center1"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_lblDoc_type"
            android:text="@string/sDoc_type"
            android:layout_below="@+id/fds_txtDoc_date"
            android:layout_toLeftOf="@+id/fds_Center1"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_txtDoc_type"
            android:layout_below="@+id/fds_lblDoc_type"
            android:layout_toLeftOf="@+id/fds_Center1"/>
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_lblDoc_notes"
            android:text="@string/sDoc_notes"
            android:layout_below="@+id/fds_txtDoc_id"
            />
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_txtDoc_notes"
            android:layout_below="@+id/fds_lblDoc_notes"
            />
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_lblDoc_attach"
            android:text="@string/sDoc_attach"
            android:layout_below="@+id/fds_txtDoc_notes"
            />
        <TextView
            style="@style/Lable"
            android:id="@+id/fds_txtDoc_attach"
            android:layout_below="@+id/fds_lblDoc_attach"
            />
        <ListView
            style="@style/matchScale"
            android:layout_below="@+id/fds_txtDoc_attach"
            android:id="@+id/fds_List"
            android:layout_above="@+id/fds_rl"
            >
        </ListView>
        <RelativeLayout
            style="@style/matchScale"
            android:layout_height="70dp"
            android:id="@+id/fds_rl"
            android:background="@color/colorCustomerCancel"
            android:layout_alignParentBottom="true"
            >
            <RelativeLayout
                style="@style/matchScale"
                android:id="@+id/fds_rlTop"
                android:layout_height="wrap_content"
                >
                <RelativeLayout
                    style="@style/matchScale.half2part.center"
                    android:id="@+id/fds_center1"/>
                <TextView
                    style="@style/Lable.TextCenter"
                    android:layout_toRightOf="@+id/fds_center1"
                    android:id="@+id/fds_Debit"/>
                <TextView
                    style="@style/Lable.TextCenter"
                    android:layout_toLeftOf="@+id/fds_center1"
                    android:id="@+id/fds_Credit"/>
                <TextView
                    style="@style/Lable.TextCenter"
                    android:layout_below="@+id/fds_Debit"
                    android:id="@+id/fds_rem"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>