<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAccountJournals">

    <RelativeLayout
        style="@style/matchScale"
        android:id="@+id/faj_rlAccounts"
        >
        <!--<TextView
            style="@style/Lable"
            android:layout_below="@+id/faj_txtAcc_No"
            android:id="@+id/faj_lblAcc_Name"
            android:text="@string/sAcc_Name"
            />-->
        <EditText
            style="@style/TextBox"
            android:id="@+id/faj_txtAcc_Name"
            android:text=""
            android:hint="@string/sAcc_Name"
            />
        <!--<TextView
            style="@style/Lable"
            android:id="@+id/faj_lblAcc_No"
            android:text="@string/sAcc_No"
            />-->
        <EditText
            style="@style/TextBox"
            android:layout_below="@+id/faj_txtAcc_Name"
            android:id="@+id/faj_txtAcc_No"
            android:text=""
            android:hint="@string/sAcc_No"
            />

        <!--<TextView
            style="@style/Lable"
            android:layout_below="@+id/faj_txtAcc_Name"
            android:id="@+id/faj_lblLAcc_Name"
            android:text="@string/sLAcc_Name"
            />
        <EditText
            style="@style/TextBox"
            android:layout_below="@+id/faj_lblLAcc_Name"
            android:id="@+id/faj_txtLAcc_Name"
            android:text=""
            />-->
        <Button
            style="@style/Button"
            android:layout_below="@+id/faj_txtAcc_No"
            android:id="@+id/faj_btnSearch"
            android:text="@string/sBtnSearch"
            />
        <ListView
            style="@style/matchScale"
            android:layout_below="@+id/faj_btnSearch"
            android:id="@+id/faj_lvAccounts"></ListView>
    </RelativeLayout>
</FrameLayout>