<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTafsilJournals">

    <RelativeLayout
        style="@style/matchScale"
        android:id="@+id/ftj_rlTafsils"
        >
        <!--<TextView
            style="@style/Lable"
            android:layout_below="@+id/ftj_txtTafsil_No"
            android:id="@+id/ftj_lblTafsil_Name"
            android:text="@string/sTafsil_Name"
            />-->
        <EditText
            style="@style/TextBox"
            android:id="@+id/ftj_txtTafsil_Name"
            android:text=""
            android:hint="@string/sAcc_Name"
            />
        <!--<TextView
            style="@style/Lable"
            android:id="@+id/ftj_lblTafsil_No"
            android:text="@string/sTafsil_No"
            />-->
        <EditText
            style="@style/TextBox"
            android:layout_below="@+id/ftj_txtTafsil_Name"
            android:id="@+id/ftj_txtTafsil_No"
            android:text=""
            android:hint="@string/sAcc_No"
            />
        <!--<TextView
            style="@style/Lable"
            android:layout_below="@+id/ftj_txtTafsil_Name"
            android:id="@+id/ftj_lblLTafsil_Name"
            android:text="@string/sLTafsil_Name"
            />
        <EditText
            style="@style/TextBox"
            android:layout_below="@+id/ftj_lblLTafsil_Name"
            android:id="@+id/ftj_txtLTafsil_Name"
            android:text=""
            />-->
        <Button
            style="@style/Button"
            android:layout_below="@+id/ftj_txtTafsil_No"
            android:id="@+id/ftj_btnSearch"
            android:text="@string/sBtnSearch"
            />
        <ListView
            style="@style/matchScale"
            android:layout_below="@+id/ftj_btnSearch"
            android:id="@+id/ftj_lvTafsils" />
    </RelativeLayout>
</FrameLayout>