<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ListRecordPadding"
    android:background="@drawable/record_shape"
    >

    <RelativeLayout
        style="@style/matchScale.half2part"
        >
        <RelativeLayout
            style="@style/matchScale.half2part.up"
            android:id="@+id/bs_rlup"
            >
            <RelativeLayout
                style="@style/matchScale.half2part.center"
                android:id="@+id/bs_rlCenter1"
                />
            <TextView
                style="@style/Lable.TextCenter"
                android:id="@+id/bs_tvlblAccNo"
                android:layout_toRightOf="@+id/bs_rlCenter1"
                android:text="@string/sAcc_No"
                />
            <TextView
                style="@style/Lable.TextCenter"
                android:id="@+id/bs_txtAccNo"
                android:layout_below="@+id/bs_tvlblAccNo"
                android:layout_toRightOf="@+id/bs_rlCenter1"
                />
            <TextView
                style="@style/Lable.TextCenter"
                android:id="@+id/bs_tvAccName"
                android:layout_toLeftOf="@+id/bs_rlCenter1"
                android:text="@string/sAcc_Name"
                />
            <TextView
                style="@style/Lable.TextCenter"
                android:id="@+id/bs_txtAccName"
                android:layout_below="@+id/bs_tvAccName"
                android:layout_toLeftOf="@+id/bs_rlCenter1"
                />
        </RelativeLayout>
        <RelativeLayout
            style="@style/matchScale.half2part.up"
            android:id="@+id/bs_rldown"
            android:layout_below="@+id/bs_rlup"
            >
            <RelativeLayout
                style="@style/matchScale.half2part.center"
                android:id="@+id/bs_rlCenter2"
                />
            <RelativeLayout
                style="@style/matchScale.half2part.up"
                android:layout_toRightOf="@+id/bs_rlCenter2"
                >
                <RelativeLayout
                    style="@style/matchScale.half2part.center"
                    android:id="@+id/bs_rlCenter3"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_tvlblFirstRemDebitSumDebit"
                    android:layout_toRightOf="@+id/bs_rlCenter3"
                    android:text="@string/sFirstRemDebitSumDebit"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_txtFirstRemDebitSumDebit"
                    android:layout_below="@+id/bs_tvlblFirstRemDebitSumDebit"
                    android:layout_toRightOf="@+id/bs_rlCenter3"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_tvlblFirstRemCreditSumCredit"
                    android:layout_toLeftOf="@+id/bs_rlCenter3"
                    android:text="@string/sFirstRemCreditSumCredit"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_txtFirstRemCreditSumCredit"
                    android:layout_below="@+id/bs_tvlblFirstRemCreditSumCredit"
                    android:layout_toLeftOf="@+id/bs_rlCenter3"
                    />
            </RelativeLayout>
            <RelativeLayout
                style="@style/matchScale.half2part.up"
                android:layout_toLeftOf="@+id/bs_rlCenter2"
                >
                <RelativeLayout
                    style="@style/matchScale.half2part.center"
                    android:id="@+id/bs_rlCenter4"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_tvlblFinalRemDebit"
                    android:layout_toRightOf="@+id/bs_rlCenter4"
                    android:text="@string/sRemDebitFinal"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_txtFinalRemDebit"
                    android:layout_below="@+id/bs_tvlblFinalRemDebit"
                    android:layout_toRightOf="@+id/bs_rlCenter4"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_tvlblFinalRemCredit"
                    android:layout_toLeftOf="@+id/bs_rlCenter4"
                    android:text="@string/sRemCreditFinal"
                    />
                <TextView
                    style="@style/Lable.TextCenter"
                    android:id="@+id/bs_txtFinalRemCredit"
                    android:layout_below="@+id/bs_tvlblFinalRemCredit"
                    android:layout_toLeftOf="@+id/bs_rlCenter4"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
